# lsp-test

./: pnpm-lock.yaml
client/src/: extension.ts
rust-server/: Cargo.toml
rust-server/src/: buffer.rs  error.rs  lib.rs  main.rs  message.rs  stdio.rs  vfs.rs
server/src/: server.ts
